--- a/Client/landingPage/index.html
+++ b/Client/landingPage/index.html
@@ -36,7 +36,7 @@
                 <div class="card">
                     <img src="./HeroImmage01.png" alt="Image 1">
                     <h2>Who we are?</h2>
-                    <p>Peace-Report began as a humble school project with a profound mission: to give a voice to thousands of individuals worldwide who lack connections to major media companies. Every story matters, and through Peace-Report, we aim to amplify the personal narratives that deserve to be heard, shining a light on the diverse experiences and perspectives that make up our global community.</p>
+                    <p>Peace Report began as a humble school project with a profound mission: to give a voice to thousands of individuals worldwide who lack connections to major media companies. Every story matters, and through Peace Report, we aim to amplify the personal narratives that deserve to be heard, shining a light on the diverse experiences and perspectives that make up our global community.</p>
                 </div>
             </li>
             <li>
